transform locations into a separate module

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
     다녀온 곳은 또 따로 표시하기 -->
     <h1>Sing Street Filming Locations</h1>
     <div id="map"></div>
-
-    <script src="script.js"></script>
   </body>
+  <script type="module" defer src="script.js"></script>
 </html>
