--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 
     <link
       rel="stylesheet"
@@ -21,16 +21,42 @@
       crossorigin=""
     ></script>
 
-    <script type="module" defer src="script.js"></script>
+    <script type="module" defer src="./js/script.js"></script>
+
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
+
     <title>싱스트리트 성지순례</title>
   </head>
   <body>
     <!--  DONE! 리플렛으로 지도 가져오기
      DONE! 지도 위에 영화 촬영지 마크
     영화 촬영지를 목록으로 보기 기능도 추가
-    다녀온 곳은 또 따로 표시하기 -->
-    <h1>Sing Street Filming Locations</h1>
-    <div class="list"></div>
+    다녀온 곳은 또 따로 표시하기
+    한영 전환 -->
+    <div class="sidebar">
+      <ul class="placelists">
+        <img
+          src="./img/android-icon-192x192.png"
+          alt="logo"
+          style="width: 20px; display: inline-block"
+        />
+        <h1 class="heading">Sing Street Filming Locations</h1>
+
+        <!-- <li class="placelist">
+          <img
+            class="placelist__image"
+            src="https://picsum.photos/200"
+            alt="movie photo"
+          />
+          <h2 class="placelist__title">장소이름</h2>
+          <p class="placelist__description">장소설명</p>
+          <button class="placelist__button">visited</button>
+        </li> -->
+      </ul>
+
+      <div class="footer">made by Jeongok Lee</div>
+    </div>
+
     <div id="map"></div>
   </body>
 </html>
