--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           alt="logo"
           style="width: 20px; display: inline-block"
         />
-        <h1 class="heading">Sing Street Filming Locations</h1>
+        <h1>Sing Street Filming Locations</h1>
 
         <!-- <li class="placelist">
           <img
