목록에서 장소를 클릭하면 해당 위치로 지도 이동

--- a/index.html
+++ b/index.html
@@ -34,22 +34,22 @@
     다녀온 곳은 또 따로 표시하기
     한영 전환 -->
     <div class="sidebar">
+      <img
+        src="./img/android-icon-192x192.png"
+        alt="logo"
+        style="width: 20px; display: inline-block"
+      />
+      <h1>Sing Street Filming Locations</h1>
       <ul class="placelists">
-        <img
-          src="./img/android-icon-192x192.png"
-          alt="logo"
-          style="width: 20px; display: inline-block"
-        />
-        <h1>Sing Street Filming Locations</h1>
-
         <!-- <li class="placelist">
           <img
             class="placelist__image"
-            src="https://picsum.photos/200"
+            src="https://picsum.photos/100"
             alt="movie photo"
           />
-          <h2 class="placelist__title">장소이름</h2>
-          <p class="placelist__description">장소설명</p>
+          <h2 class="placelist__name">장소이름</h2>
+          <span class="placelist__address">주소</span>
+          <p class="placelist__description">설명</p>
           <button class="placelist__button">visited</button>
         </li> -->
       </ul>
