--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
   <body>
     <!--  DONE! 리플렛으로 지도 가져오기
      DONE! 지도 위에 영화 촬영지 마크
-    영화 촬영지를 목록으로 보기 기능도 추가
+    DONE! 영화 촬영지를 목록으로 보기 기능도 추가
     다녀온 곳은 또 따로 표시하기
+    모두 visited로 바뀌면 축하 알림 띄우기
+    사용자 위치기반으로 visited 버튼 누를 수 있게 하고 싶은데..
     한영 전환 -->
     <div class="sidebar">
       <img
