--- a/index.html
+++ b/index.html
@@ -25,23 +25,16 @@
 
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
 
-    <title>싱스트리트 성지순례</title>
+    <title>Sing Street Filming Locations</title>
   </head>
   <body>
-    <!--  DONE! 리플렛으로 지도 가져오기
-     DONE! 지도 위에 영화 촬영지 마크
-    DONE! 영화 촬영지를 목록으로 보기 기능도 추가
-    DONE! 다녀온 곳은 또 따로 표시하기
-    모두 visited로 바뀌면 축하 알림 띄우기
-    사용자 위치기반으로 visited 버튼 누를 수 있게 하고 싶은데..
-    한영 전환 -->
     <div class="container">
       <div class="sidebar">
         <div class="titlebox">
           <img
             class="titlebox__image"
             src="./img/android-icon-192x192.png"
-            alt="logo"
+            alt="movie-logo"
           />
           <h1 class="titlebox__heading">
             <span>Sing Street</span>
@@ -50,7 +43,12 @@
         </div>
         <ul class="placelists"></ul>
 
-        <div class="footer">made by Jeongok Lee</div>
+        <a href="https://github.com/ok-olly" target="_blank" class="footer">
+          <span>made by Jeongok Lee</span>
+          <svg class="footer__image">
+            <use xlink:href="img/sprite.svg#icon-github"></use>
+          </svg>
+        </a>
       </div>
 
       <div id="map"></div>
