--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
         </div>
         <ul class="placelists"></ul>
 
-        <a href="https://github.com/ok-olly" target="_blank" class="footer">
+        <a
+          href="https://github.com/ok-olly/sing-street"
+          target="_blank"
+          class="footer"
+        >
           <span>made by Jeongok Lee</span>
           <svg class="footer__image">
             <use xlink:href="img/sprite.svg#icon-github"></use>
