--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           target="_blank"
           class="footer"
         >
-          <span>made by Jeongok Lee</span>
+          <span>made by Olivia Lee</span>
           <svg class="footer__image">
             <use xlink:href="img/sprite.svg#icon-github"></use>
           </svg>
